Handle strings in vars to some degree; gonna need to do type checks on the expression tree since it's making use of that to move string constants around.
Can't seem to get ( expr ) to work

function calls can be used in math expressions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ set(SOURCES
 
         src/boolexpr.hpp
         src/expr.hpp
+        src/stringexpr.hpp
         src/scanner.hpp
         src/driver.hpp                                      src/driver.cpp
 
